# power-profiles-daemon

./: .gitlab-ci.yml  NEWS  README.md  meson.build
data/: power-profiles-daemon.service.in
debian/: changelog  control  copyright  gbp.conf  power-profiles-daemon.maintscript  rules  watch
debian/upstream/: metadata
src/: meson.build  power-profiles-daemon.c  powerprofilesctl  ppd-action-amdgpu-dpm.c  ppd-action-amdgpu-dpm.h  ppd-action-amdgpu-panel-power.c  ppd-action.c  ppd-action.h  ppd-driver-amd-pstate.c  ppd-driver-fake.c  ppd-driver-intel-pstate.c  ppd-driver-platform-profile.c  ppd-driver.c  ppd-driver.h  ppd-profile.c  ppd-profile.h  ppd-utils.c  ppd-utils.h
src/completions/: meson.build
tests/: integration_test.py  meson.build
